--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -56,6 +57,8 @@
     "@types/react-dom": "^18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "typescript": "4.7.4"
   },
   "husky": {
@@ -66,6 +69,7 @@
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "./node_modules/.bin/eslint --fix",
+      "./node_modules/.bin/jest",
       "git add"
     ]
   }
