--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "./node_modules/.bin/eslint --fix",
-      "./node_modules/.bin/jest",
+      "jest --bail --findRelatedTests",
+      "cypress run",
       "git add"
     ]
   }
