--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: Eslint
-        run: eslint . --ext .js,.jsx,.ts,.tsx
+        run: npm run lint
 
       - name: Run Jest tests
         run: npm run test
