--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prepare": "husky install",
-    "test": "jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "cypress": "cypress open",
     "storybook": "start-storybook -p 6006 -s public"
   },
