--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "cypress": "cypress open",
-    "storybook": "start-storybook -p 6006 -s public"
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@next/eslint-plugin-next": "^12.1.6",
+    "@next/plugin-storybook": "^12.1.6",
     "@storybook/addon-actions": "^6.5.5",
     "@storybook/addon-essentials": "^6.5.5",
     "@storybook/addon-interactions": "^6.5.5",
     "@storybook/addon-links": "^6.5.5",
-    "@storybook/builder-webpack5": "^6.5.5",
-    "@storybook/manager-webpack5": "^6.5.5",
     "@storybook/node-logger": "^6.5.5",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.3",
     "@types/storybook__react": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -51,22 +51,33 @@
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
     "storybook": "^1.0.0",
     "storybook-addon-designs": "^6.3.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@storybook/builder-webpack5": "^6.5.0-rc.1",
+    "@storybook/manager-webpack5": "^6.5.0-rc.1",
+    "@types/jest": "^28.1.3",
     "@types/node": "18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
+    "chromatic": "^6.6.3",
     "cypress": "^10.2.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "storybook-addon-next": "^1.6.6",
     "storybook-addon-xd-designs": "^6.0.0",
-    "typescript": "4.7.4"
+    "ts-jest": "^28.0.5",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0"
   },
   "husky": {
     "hooks": {
