--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,16 +22,36 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@config/*": ["./src/config/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@services/*": ["./src/services/*"],
-      "types/*": ["./src/types/*"],
-      "@contexts/*": ["./src/contexts/*"],
-      "@store/*": ["./src/store/*"],
-      "@styles/*": ["./src/styles/*"],
-      "@providers/*": ["./src/providers/*"],
-      "@fetchers/*": ["./src/fetchers/*"],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@config/*": [
+        "./src/config/*"
+      ],
+      "@assets/*": [
+        "./src/assets/*"
+      ],
+      "@services/*": [
+        "./src/services/*"
+      ],
+      "types/*": [
+        "./src/types/*"
+      ],
+      "@contexts/*": [
+        "./src/contexts/*"
+      ],
+      "@store/*": [
+        "./src/store/*"
+      ],
+      "@styles/*": [
+        "./src/styles/*"
+      ],
+      "@providers/*": [
+        "./src/providers/*"
+      ],
+      "@fetchers/*": [
+        "./src/fetchers/*"
+      ]
     }
   },
   "include": [
@@ -39,5 +59,5 @@
   ],
   "exclude": [
     "node_modules"
-  ],
+  ]
 }
