--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:docker": "next build && next start",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
